--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>Pathfinding Visualizer</title>
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="styles/magic.min.css">
 	<script src="https://kit.fontawesome.com/d1f3dd87b7.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: rgb(255, 235, 250);">
